Fix broken test and form wrap

--- a/assets/stylesheets/common/discourse-patrons.scss
+++ b/assets/stylesheets/common/discourse-patrons.scss
@@ -43,6 +43,12 @@
   background-color: $primary-low;
 }
 
+.discource-patrons-fields {
+  .field {
+    width: 25%;
+  }
+}
+
 #card-action {
   margin: 20px 0;
 }
